# Oven

./: .gitignore  .gitmodules  CMakeLists.txt  humanization_start.sh  partitions.csv  partitions_c6.csv  partitions_s3_16m.csv  partitions_s3_8m.csv  sdkconfig.defaults  sync_bsp_to_modules.sh
.github/: pull_request_template.md
main/: CMakeLists.txt  Kconfig  ServiceRegistration.cpp  ServiceRegistration.hpp  ServiceRegistration_Oven_Example.cpp  app_main.cpp  idf_component.yml
main/ServiceManager/: SERVICE_MANAGER_SELECTION.md  ServiceFactory.cpp  ServiceFactory.hpp  ServiceMngr.cpp  ServiceMngr.hpp  ServiceMngr_Generalized.cpp  ServiceMngr_Generalized.hpp  ServiceMngr_Legacy.cpp  ServiceMngr_Legacy.hpp
